Edited Footer Section

--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
         <a href="#" class="logo">Tourest</a>
 
         <p class="copyright">
-        &copy; 2024 <a href="#" class="copyright-link">codewithankit</a>. All Rights Reserved
+        &copy; 2025 <a href="#" class="copyright-link">Ankit Raj</a>. All Rights Reserved
         </p>
 
         <ul class="social-list">
