Update LinkedIn link in index.html

--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
         </li>
 
         <li>
-            <a href="#" class="social-link">
+            <a href="https://www.linkedin.com/in/ankitrpathak/" class="social-link">
             <ion-icon name="logo-linkedin"></ion-icon>
             </a>
         </li>
