Update links in index.html for better navigation

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
             </p>
 
             <div class="btn-group">
-            <a href="#" class="btn btn-primary">Contact Us</a>
+            <a href="#footer" class="btn btn-primary">Contact Us</a>
 
-            <a href="#" class="btn btn-outline">Learn More</a>
+            <a href="#about-text" class="btn btn-outline">Learn More</a>
             </div>
 
         </div>
