--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 
             </ul>
 
-            <a href="#" class="btn btn-primary">Booking Now</a>
+            <a href="booking.html" class="btn btn-primary">Booking Now</a>
 
         </div>
 
